--- a/index.css
+++ b/index.css
@@ -29,7 +29,6 @@
 
 .res-card{
     width: 200px;
-    height: 300px;
     padding: 4px;
     margin: 8px;
 }
@@ -51,4 +50,10 @@
 .res-container{
     display: flex;
     flex-wrap: wrap;
+}
+
+.filter-btn{
+    margin: 12px;
+    padding: 4px;
+    cursor: pointer;
 }
