--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
 .header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border: 2px solid red;
 }
 
@@ -31,6 +32,7 @@
     width: 200px;
     padding: 4px;
     margin: 8px;
+    border-radius: 14px;
 }
 
 .res-card:hover{
@@ -56,4 +58,25 @@
     margin: 12px;
     padding: 4px;
     cursor: pointer;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    width: 200px;
+    height: 400px;
+    margin: 20px;
+    background-color: #f0f0f0;
+}
+
+.login-btn{
+    padding: 0 20px;
+    cursor: pointer;
+}
+
+.filter{
+    display: flex;
 }
