--- a/index.css
+++ b/index.css
@@ -6,6 +6,10 @@
     color: rgb(2, 2, 2);
 }
 
+li{
+    list-style: none;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -79,4 +83,19 @@
 
 .filter{
     display: flex;
+}
+
+.menu-item-img{
+    width: 200px;
+}
+
+.menu-item-img > img{
+    width: 100%;
+    margin: 16px;
+}
+
+.menu-item-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
